--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,16 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+**/mvnw
+**/mvnw.cmd
+**/.mvn
+**/target
+**/.gitignore
+**/.gitattributes
+**/HELP.md
+**/misc.xml
+**/vcs.xml
+**/jarRepositories.xml
+**/encodings.xml
+**/compiler.xml
